--- a/app/src/main/res/layout/fragment_sign_up_add_boss_now.xml
+++ b/app/src/main/res/layout/fragment_sign_up_add_boss_now.xml
@@ -15,13 +15,25 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
-    <ListView
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Would you like to add boss info now or later?"
+        android:id="@+id/textView4"
+        android:textSize="18sp"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="72dp" />
+
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/industry_list"
+        android:text="Add Later"
+        android:id="@+id/via_app"
+        android:layout_above="@+id/progressBar"
         android:layout_centerHorizontal="true"
-        android:layout_alignParentTop="true"
-        android:layout_above="@+id/continue_btn" />
+        android:layout_marginBottom="46dp" />
+
+
 
     <ProgressBar
         android:layout_width="wrap_content"
@@ -33,6 +45,7 @@
         android:layout_above="@+id/continue_btn"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="122dp" />
+
 
 
 </RelativeLayout>
