--- a/app/src/main/res/layout/fragment_sign_up_co_worker.xml
+++ b/app/src/main/res/layout/fragment_sign_up_co_worker.xml
@@ -9,17 +9,24 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="57dp"
-        android:padding="20dp">
-
+        android:padding="10dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Pls enter your home address"
+            android:text="Enter Co worker info"
             android:id="@+id/textView2"
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="20dp" />
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="phone"
+            android:hint="Email"
+            android:ems="10"
+            android:id="@+id/email"
+            android:text="nondefyde@gmail.com" />
 
         <EditText
             android:layout_width="match_parent"
@@ -57,6 +64,64 @@
             android:id="@+id/zip"
             android:ems="10" />
 
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="text"
+            android:hint="County ?"
+            android:text="Dallas"
+            android:id="@+id/territory"
+            android:ems="10" />
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="text"
+            android:hint="Zip Code"
+            android:text="+2348061539278"
+            android:id="@+id/phone"
+            android:ems="10" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Invite via"
+            android:id="@+id/textView3"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="20dp" />
+
+        <RadioGroup
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:id="@+id/ivite_by">
+
+            <RadioButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="SMS"
+                android:id="@+id/by_sms"
+                android:layout_gravity="center_horizontal"
+                android:checked="true" />
+
+            <RadioButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="EMAIL"
+                android:id="@+id/by_email"
+                android:layout_gravity="center_horizontal"
+                android:checked="false" />
+
+            <RadioButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="NO INVITE"
+                android:id="@+id/no_invite"
+                android:layout_gravity="center_horizontal"
+                android:checked="false" />
+
+        </RadioGroup>
+
         <ProgressBar
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -65,7 +130,6 @@
             android:visibility="invisible"
             android:indeterminate="false"
             android:layout_gravity="center_horizontal" />
-
 
     </LinearLayout>
 
