--- a/app/src/main/res/layout/fragment_sign_up_group_desc.xml
+++ b/app/src/main/res/layout/fragment_sign_up_group_desc.xml
@@ -15,28 +15,34 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="how would you describe your self for this group"
             android:id="@+id/textView2"
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="20dp" />
 
-        <RadioButton
+        <RadioGroup
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="I am a Principal"
-            android:id="@+id/principal"
-            android:layout_gravity="center_horizontal"
-            android:checked="false" />
+            android:id="@+id/desc_rep_type">
 
-        <RadioButton
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="I am a sub rep"
-            android:id="@+id/sub_rep"
-            android:layout_gravity="center_horizontal"
-            android:checked="true"
-            android:layout_marginTop="30dp" />
+            <RadioButton
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="I am a Principal"
+                android:id="@+id/principal"
+                android:layout_gravity="center_horizontal"
+                android:checked="false" />
+
+            <RadioButton
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="I am a sub rep"
+                android:id="@+id/sub_rep"
+                android:layout_gravity="center_horizontal"
+                android:checked="true"
+                android:layout_marginTop="30dp" />
+
+        </RadioGroup>
 
         <ProgressBar
             android:layout_width="wrap_content"
