--- a/app/src/main/res/layout/fragment_sign_up_verify_code.xml
+++ b/app/src/main/res/layout/fragment_sign_up_verify_code.xml
@@ -5,6 +5,16 @@
     android:layout_height="match_parent">
 
 
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="numberSigned"
+        android:hint="Enter Code"
+        android:ems="10"
+        android:id="@+id/code"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="88dp" />
 
     <Button
         android:layout_width="match_parent"
@@ -12,16 +22,8 @@
         android:text="Continue"
         android:id="@+id/continue_btn"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
-    <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/industry_list"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentTop="true"
-        android:layout_above="@+id/continue_btn" />
 
     <ProgressBar
         android:layout_width="wrap_content"
@@ -32,7 +34,5 @@
         android:layout_gravity="center_horizontal"
         android:layout_above="@+id/continue_btn"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="122dp" />
-
-
+        android:layout_marginBottom="155dp" />
 </RelativeLayout>
