--- a/app/src/main/res/layout/fragment_sign_up_add_boss_now.xml
+++ b/app/src/main/res/layout/fragment_sign_up_add_boss_now.xml
@@ -16,13 +16,15 @@
         android:layout_alignParentStart="true" />
 
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Would you like to add boss info now or later?"
         android:id="@+id/textView4"
         android:textSize="18sp"
+        android:layout_marginTop="71dp"
+        android:layout_gravity="center"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="72dp" />
+        android:layout_centerHorizontal="true" />
 
     <Button
         android:layout_width="wrap_content"
